# quickstfp

./: .gitignore  README.md  code_review.md  justfile  main.py  mcp_server.py  project_analysis.md  pyproject.toml  session.py  sql.py  terminal.py  transport.py  user_database.py
.omo/run-continuation/: ses_178fbab84ffeFDoAEyHtvjZQgW.json
app/: config.py  deps.py  main.py  schemas.py
app/core/: session.py  speed_limiter.py  transport.py
app/router/: page.py  session.py  sftp.py  site.py  snippet.py  transport.py
app/service/: snippet_service.py  ssh_manager.py
app/template/: base.html  error.html  session.html  site_manager.html
app/websocket/: progress.py  terminal.py
core/: config.py  protocols.py  session.py  sftp_file_manager.py  transport.py
database/: user_model.py
quickstfp/: main.py
quickstfp/core/: session.py  transport.py
quickstfp/database/: user_model.py
quickstfp/ui/components/: progress_bar.py  terminal_widget.py
quickstfp/ui/terminal/: __init__.py  (+2 more)
quickstfp/utils/: file_utils.py
static/css/: app.css
static/js/: editor.js  filebrowser.js  snippets.js  terminal.js  transport.js
tests/: conftest.py  test_api_session.py  test_api_sftp.py  test_api_site.py  test_api_snippet.py  test_api_transport.py  test_crypto.py  test_frontend.py  test_frontend_boundary.py  test_frontend_error.py  test_frontend_normal.py  test_scheduler_pool.py  test_speed_limiter.py  test_ssh_manager.py  test_ssh_session.py  test_transport.py  test_ws_endpoints.py
ui/components/: progress_bar.py  terminal_widget.py
ui/dialogs/: user_manager.py
ui/terminal/: widget.py
ui/views/: __init__.py  base_remote_tree.py  batch_rename_dialog.py  clipboard_mixin.py  editor_widgets.py  local_widgets.py  login_view.py  port_forward_dialog.py  remote_drag_drop.py  remote_file_widget.py  sftp_tab_widget.py  sftp_view.py  site_manager.py  snippets_widget.py  transport_widgets.py  user_widgets.py
ui/web/: terminal.html
(+11 files in other folders)
